Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- The script for editing notifications failed if the correct object was not
  an object manager.
- Renamed translation file cps-subscriptions.pot as cpssubscriptions.pot to ease
  translation work (automation). Fixes #779.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
- better french notification messages by Delphine
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-